data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_4036.wast
;; 5. **Table Index with Invalid References**:    - Employ `call_indirect` with a valid index but referencing a non-function entry.    - Constraint Check: Ensure the table index only refers to `funcref` entries.    - Stack Corruption Relation: Invalid references may leave the stack unaltered where it should alter or push junk memory causing corruption.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $non_func)
    (func $non_func)
    (func (call_indirect (type 0) (i32.const 0) (i32.const 42)))
  )
  "type mismatch"
)